fix endpoints, upgrade modules, linter
