# openapi.yaml
@@ -23,8 +23,7 @@ externalDocs:
   description: Find out more about the app saml-sso
   url: https://github.com/eliona-smart-building-assistant/app-saml-sso
 servers:
-  - url: http://saml-sso/v1
-  - url: https://cust.eliona.cloud/apps/saml-sso/api/
+  - url: https://cust.eliona.cloud
 security:
   - ApiKeyAuth: []
 
@@ -50,7 +49,7 @@ tags:
       url: https://github.com/eliona-smart-building-assistant/sso
 
 paths:
-  /sso/active:
+  /apps-public/saml-sso/active:
     get:
       tags:
         - Generic Single Sign-On
@@ -65,7 +64,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Active"
 
-  /sso/auth:
+  /apps-public/saml-sso/auth:
     get:
       tags:
         - Generic Single Sign-On
@@ -76,7 +75,7 @@ paths:
         "302":
           description: Started login, redirect to the IdP with the SAML request
 
-  /saml/acs:
+  /apps-public/saml-sso/acs:
     description: SAML's Assertion Consumer Service
     post:
       tags:
@@ -85,7 +84,7 @@ paths:
         "302":
           description: SAML response returned from the IdP redirected to the auth endpoint to evaluate and login
 
-  /saml/slo:
+  /apps-public/saml-sso/slo:
     description: SAML's Single Logout Service
     post:
       tags:
@@ -94,7 +93,7 @@ paths:
         "302":
           description: SAML response returned from the IdP redirected to the auth endpoint to logout
 
-  /configuration:
+  /apps/saml-sso/api/configuration:
     get:
       tags:
         - Configuration
@@ -127,7 +126,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Configuration"
 
-  /configuration/attribute-mapping:
+  /apps/saml-sso/api/configuration/attribute-mapping:
     get:
       tags:
         - Configuration
@@ -160,7 +159,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AttributeMap"
 
-  /configuration/permission-mapping:
+  /apps/saml-sso/api/configuration/permission-mapping:
     get:
       tags:
         - Configuration
@@ -193,7 +192,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Permissions"
 
-  /version:
+  /apps/saml-sso/api/version:
     get:
       summary: Version of the API
       description: Gets information about the APIs version.
@@ -208,7 +207,7 @@ paths:
               schema:
                 type: object
 
-  /version/openapi.json:
+  /apps/saml-sso/api/version/openapi.json:
     get:
       summary: OpenAPI specification for this API version
       description: Gets specification for this API version as an openapi.json file.
